# mcl-android

./: .gitmodules  readme.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-libs.cpp  mcl_common.hpp  test.cpp
app/src/main/java/com/example/hellolibs/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
